[package]
name = "rustUE"
version = "0.1.0"
authors = ["171230839 <a171230839@163.com>"]
build="build.rs"

[[bin]]
name = "ue_editor"
path = "src/bin/ue_editor.rs"


[lib]
name = "rustue"
path = "src/rustue.rs"

[dependencies]
env_logger = "0.4"
log = "0.3"
error-chain = "0.11.0-rc.2"
docopt = "0.8.1"
serde = "1.0"
serde_derive = "1.0"

